<resources>
    <string name="app_name">Random Trivia</string>
    <string name="getWeather">Button</string>
    <string name="update">Update</string>
    <string name="Update">Update</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="restart">Restart</string>
    <string name="score">Score:</string>
    <string name="lives">Lives:</string>
    <string name="question">Question:</string>
</resources>
