<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart" />

        <TextView
            android:id="@+id/scores"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:text="@string/score" />

        <TextView
            android:id="@+id/lives"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:text="@string/lives" />
    </TableRow>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="456dp"
        android:layout_weight="1"
        android:text="@string/question" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_A"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a" />

        <Button
            android:id="@+id/button_B"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/b" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_C"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/c" />

        <Button
            android:id="@+id/button_D"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/d" />
    </TableRow>

</LinearLayout>